--- a/Project2/Project2/Project2.csproj
+++ b/Project2/Project2/Project2.csproj
@@ -200,6 +200,7 @@
     </Compile>
     <Compile Include="Models\AccountViewModels.cs" />
     <Compile Include="Models\CompleteProject.cs" />
+    <Compile Include="Models\FAQ.cs" />
     <Compile Include="Models\IdentityModels.cs" />
     <Compile Include="Models\ManageViewModels.cs" />
     <Compile Include="Models\Material.cs" />
@@ -300,6 +301,7 @@
     <Content Include="Views\Projects\Electronics.cshtml" />
     <Content Include="Views\Projects\Project.cshtml" />
     <Content Include="Views\Projects\Wood.cshtml" />
+    <Content Include="Views\Home\FAQ.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
